Opened 17 years ago

Closed 17 years ago

#1005 closed bug (fixed)

BHandler::StartWatching(BMessenger, ...) is implemented completely wrong

Reported by: axeld Owned by: axeld
Priority: normal Milestone: R1
Component: Kits/Application Kit Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

The above method is implemented incorrectly, and doesn't do what it should do. It should send a message to the BMessenger, and asking it to start observing it, not the other way around. This is the only way to observe handlers in other teams. It's needed for BFilePanel for example.

Change History (1)

comment:1 by axeld, 17 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev20029.

Note: See TracTickets for help on using tickets.