* The BHandler observer mechanism was completely broken in Haiku for remote targets;   this fixes bug #1005. As a result, the Disks icon will now appear in file panels   when you change that setting with a panel open. * _ObserverList is now in the BPrivate namespace (and renamed to ObserverList). * its BHandler map is now only temporarily used for handlers that do not belong to   a looper yet; when BHandler::SendNotices() is called, they will be transferred   into the BMessenger map. * Invalid messengers are now removed from the map when encountered. * Added TODO comments about a possible reference counting if a handler is added   twice to a list (right now, this will be ignored). * All {Start|Stop}Watching() methods are now more or less safe to be used in low   memory situations (adding some items to the map can still throw an exception...). * Renamed BHandler::InitData() to _InitData(). * Some refactoring and cleanup.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@20029 a95241bf-73f2-0310-859d-f6bbb57e9c96